// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Trivia 2 rolls of 1 1`] = `
Array [
  "Pop questions: 50",
  "Science questions: 50",
  "Sports questions: 50",
  "Rock questions: 50",
  "Number of players: 1",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 1",
  "Asking question: Science Question 0",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 2",
  "Asking question: Sports Question 0",
]
`;

exports[`Trivia 5 rolls of 1 1`] = `
Array [
  "Pop questions: 50",
  "Science questions: 50",
  "Sports questions: 50",
  "Rock questions: 50",
  "Number of players: 1",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 1",
  "Asking question: Science Question 0",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 2",
  "Asking question: Sports Question 0",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 3",
  "Asking question: Rock Question 0",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 4",
  "Asking question: Pop Question 0",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 5",
  "Asking question: Science Question 1",
]
`;

exports[`Trivia Add 3 player 1`] = `
Array [
  "Pop questions: 50",
  "Science questions: 50",
  "Sports questions: 50",
  "Rock questions: 50",
  "Number of players: 1",
  "Number of players: 2",
  "Number of players: 3",
]
`;

exports[`Trivia Answer 6 times correctly 1`] = `
Array [
  "Pop questions: 50",
  "Science questions: 50",
  "Sports questions: 50",
  "Rock questions: 50",
  "Number of players: 1",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 1",
  "Asking question: Science Question 0",
  "Player 0 answered correctly",
  "He's got 1 points now",
  "Player 0 did not win",
  "He isn't the winner",
  "The next player is player 0",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 2",
  "Asking question: Sports Question 0",
  "Player 0 answered correctly",
  "He's got 2 points now",
  "Player 0 did not win",
  "He isn't the winner",
  "The next player is player 0",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 3",
  "Asking question: Rock Question 0",
  "Player 0 answered correctly",
  "He's got 3 points now",
  "Player 0 did not win",
  "He isn't the winner",
  "The next player is player 0",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 4",
  "Asking question: Pop Question 0",
  "Player 0 answered correctly",
  "He's got 4 points now",
  "Player 0 did not win",
  "He isn't the winner",
  "The next player is player 0",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 5",
  "Asking question: Science Question 1",
  "Player 0 answered correctly",
  "He's got 5 points now",
  "Player 0 did not win",
  "He isn't the winner",
  "The next player is player 0",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 6",
  "Asking question: Sports Question 1",
  "Player 0 answered correctly",
  "He's got 6 points now",
  "Player 0 did win",
  "He is the winner",
  "The next player is player 0",
]
`;

exports[`Trivia Answer correctly 1`] = `
Array [
  "Pop questions: 50",
  "Science questions: 50",
  "Sports questions: 50",
  "Rock questions: 50",
  "Number of players: 1",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 1",
  "Asking question: Science Question 0",
  "Player 0 answered correctly",
  "He's got 1 points now",
  "Player 0 did not win",
  "He isn't the winner",
  "The next player is player 0",
]
`;

exports[`Trivia Answer wrong and change player 1`] = `
Array [
  "Pop questions: 50",
  "Science questions: 50",
  "Sports questions: 50",
  "Rock questions: 50",
  "Number of players: 1",
  "Number of players: 2",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 1",
  "Asking question: Science Question 0",
  "Player 0 answered correctly",
  "He's got 1 points now",
  "Player 0 did not win",
  "He isn't the winner",
  "The next player is player 1",
  "Player 1 rolled 1",
  "While not being in penalityBox",
  "He moves to place 1",
  "Asking question: Science Question 1",
  "Player 1 answered wrongly",
  "He is put in penality box",
  "The current player is now 0",
]
`;

exports[`Trivia Answer wrongly 1`] = `
Array [
  "Pop questions: 50",
  "Science questions: 50",
  "Sports questions: 50",
  "Rock questions: 50",
  "Number of players: 1",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 1",
  "Asking question: Science Question 0",
  "Player 0 answered wrongly",
  "He is put in penality box",
  "The current player is now 0",
]
`;

exports[`Trivia Answer wrongly and then roll even 1`] = `
Array [
  "Pop questions: 50",
  "Science questions: 50",
  "Sports questions: 50",
  "Rock questions: 50",
  "Number of players: 1",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 1",
  "Asking question: Science Question 0",
  "Player 0 answered wrongly",
  "He is put in penality box",
  "The current player is now 0",
  "Player 0 rolled 2",
  "While in penalityBox",
  "He won't get out of penality box",
]
`;

exports[`Trivia Answer wrongly and then roll even and then answer correctly 1`] = `
Array [
  "Pop questions: 50",
  "Science questions: 50",
  "Sports questions: 50",
  "Rock questions: 50",
  "Number of players: 1",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 1",
  "Asking question: Science Question 0",
  "Player 0 answered wrongly",
  "He is put in penality box",
  "The current player is now 0",
  "Player 0 rolled 2",
  "While in penalityBox",
  "He won't get out of penality box",
  "Player 0 answered correctly",
  "He currently is in penality box",
  "And he's NOT getting out of it",
  "The next player is player 0",
]
`;

exports[`Trivia Answer wrongly and then roll odd 1`] = `
Array [
  "Pop questions: 50",
  "Science questions: 50",
  "Sports questions: 50",
  "Rock questions: 50",
  "Number of players: 1",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 1",
  "Asking question: Science Question 0",
  "Player 0 answered wrongly",
  "He is put in penality box",
  "The current player is now 0",
  "Player 0 rolled 3",
  "While in penalityBox",
  "He rolled an odd number",
  "He might get out of penality box",
  "He moves to place 4",
  "Asking question: Pop Question 0",
]
`;

exports[`Trivia Answer wrongly and then roll odd and then answer correctly 1`] = `
Array [
  "Pop questions: 50",
  "Science questions: 50",
  "Sports questions: 50",
  "Rock questions: 50",
  "Number of players: 1",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 1",
  "Asking question: Science Question 0",
  "Player 0 answered wrongly",
  "He is put in penality box",
  "The current player is now 0",
  "Player 0 rolled 3",
  "While in penalityBox",
  "He rolled an odd number",
  "He might get out of penality box",
  "He moves to place 4",
  "Asking question: Pop Question 0",
  "Player 0 answered correctly",
  "He currently is in penality box",
  "And he's getting out of it",
  "He's got 1 points now",
  "Player 0 did not win",
  "He isn't the winner",
  "The next player is player 0",
]
`;

exports[`Trivia Ask all categories 1`] = `
Array [
  "Pop questions: 50",
  "Science questions: 50",
  "Sports questions: 50",
  "Rock questions: 50",
  "Number of players: 1",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 1",
  "Asking question: Science Question 0",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 2",
  "Asking question: Sports Question 0",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 3",
  "Asking question: Rock Question 0",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 4",
  "Asking question: Pop Question 0",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 5",
  "Asking question: Science Question 1",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 6",
  "Asking question: Sports Question 1",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 7",
  "Asking question: Rock Question 1",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 8",
  "Asking question: Pop Question 1",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 9",
  "Asking question: Science Question 2",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 10",
  "Asking question: Sports Question 2",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 11",
  "Asking question: Rock Question 2",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 0",
  "Asking question: Pop Question 2",
]
`;

exports[`Trivia Correct answer, roll and out of bounds 1`] = `
Array [
  "Pop questions: 50",
  "Science questions: 50",
  "Sports questions: 50",
  "Rock questions: 50",
  "Number of players: 1",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 1",
  "Asking question: Science Question 0",
  "Player 0 answered correctly",
  "He's got 1 points now",
  "Player 0 did not win",
  "He isn't the winner",
  "The next player is player 0",
  "Player 0 rolled 7",
  "While not being in penalityBox",
  "He moves to place 8",
  "Asking question: Pop Question 0",
  "Player 0 rolled 7",
  "While not being in penalityBox",
  "He moves to place 3",
  "Asking question: Rock Question 0",
]
`;

exports[`Trivia Correct answer, roll and out of bounds 2`] = `
Array [
  "Pop questions: 50",
  "Science questions: 50",
  "Sports questions: 50",
  "Rock questions: 50",
  "Number of players: 1",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 1",
  "Asking question: Science Question 0",
  "Player 0 answered wrongly",
  "He is put in penality box",
  "The current player is now 0",
  "Player 0 rolled 6",
  "While in penalityBox",
  "He won't get out of penality box",
  "Player 0 answered correctly",
  "He currently is in penality box",
  "And he's NOT getting out of it",
  "The next player is player 0",
]
`;

exports[`Trivia Correctly answered by in penality player and NOT getting out of it 1`] = `
Array [
  "Pop questions: 50",
  "Science questions: 50",
  "Sports questions: 50",
  "Rock questions: 50",
  "Number of players: 1",
  "Player 0 answered wrongly",
  "He is put in penality box",
  "The current player is now 0",
  "Player 0 rolled 2",
  "While in penalityBox",
  "He won't get out of penality box",
  "Player 0 answered correctly",
  "He currently is in penality box",
  "And he's NOT getting out of it",
  "The next player is player 0",
]
`;

exports[`Trivia Correctly answered by in penality player and getting out of it 1`] = `
Array [
  "Pop questions: 50",
  "Science questions: 50",
  "Sports questions: 50",
  "Rock questions: 50",
  "Number of players: 1",
  "Player 0 answered wrongly",
  "He is put in penality box",
  "The current player is now 0",
  "Player 0 rolled 1",
  "While in penalityBox",
  "He rolled an odd number",
  "He might get out of penality box",
  "He moves to place 1",
  "Asking question: Science Question 0",
  "Player 0 answered correctly",
  "He currently is in penality box",
  "And he's getting out of it",
  "He's got 1 points now",
  "Player 0 did not win",
  "He isn't the winner",
  "The next player is player 0",
]
`;

exports[`Trivia Correctly answered by in penality player and getting out of it but not last player 1`] = `
Array [
  "Pop questions: 50",
  "Science questions: 50",
  "Sports questions: 50",
  "Rock questions: 50",
  "Number of players: 1",
  "Number of players: 2",
  "Player 0 answered wrongly",
  "He is put in penality box",
  "The current player is now 1",
  "Player 1 rolled 1",
  "While not being in penalityBox",
  "He moves to place 1",
  "Asking question: Science Question 0",
  "Player 1 answered correctly",
  "He's got 1 points now",
  "Player 1 did not win",
  "He isn't the winner",
  "The next player is player 0",
]
`;

exports[`Trivia Create game 1`] = `
Array [
  "Pop questions: 50",
  "Science questions: 50",
  "Sports questions: 50",
  "Rock questions: 50",
]
`;

exports[`Trivia My global scenario 1`] = `
Array [
  "Pop questions: 50",
  "Science questions: 50",
  "Sports questions: 50",
  "Rock questions: 50",
  "Number of players: 1",
  "Number of players: 2",
  "Number of players: 3",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 1",
  "Asking question: Science Question 0",
  "Player 0 answered correctly",
  "He's got 1 points now",
  "Player 0 did not win",
  "He isn't the winner",
  "The next player is player 1",
  "Player 1 rolled 1",
  "While not being in penalityBox",
  "He moves to place 1",
  "Asking question: Science Question 1",
  "Player 1 answered wrongly",
  "He is put in penality box",
  "The current player is now 2",
  "Player 2 rolled 1",
  "While not being in penalityBox",
  "He moves to place 1",
  "Asking question: Science Question 2",
  "Player 2 answered wrongly",
  "He is put in penality box",
  "The current player is now 0",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 2",
  "Asking question: Sports Question 0",
  "Player 0 answered correctly",
  "He's got 2 points now",
  "Player 0 did not win",
  "He isn't the winner",
  "The next player is player 1",
  "Player 1 rolled 1",
  "While in penalityBox",
  "He rolled an odd number",
  "He might get out of penality box",
  "He moves to place 2",
  "Asking question: Sports Question 1",
  "Player 1 answered wrongly",
  "He is put in penality box",
  "The current player is now 2",
  "Player 2 rolled 1",
  "While in penalityBox",
  "He rolled an odd number",
  "He might get out of penality box",
  "He moves to place 2",
  "Asking question: Sports Question 2",
  "Player 2 answered correctly",
  "He currently is in penality box",
  "And he's getting out of it",
  "He's got 1 points now",
  "Player 2 did not win",
  "He isn't the winner",
  "The next player is player 0",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 3",
  "Asking question: Rock Question 0",
  "Player 0 answered correctly",
  "He's got 3 points now",
  "Player 0 did not win",
  "He isn't the winner",
  "The next player is player 1",
  "Player 1 rolled 1",
  "While in penalityBox",
  "He rolled an odd number",
  "He might get out of penality box",
  "He moves to place 3",
  "Asking question: Rock Question 1",
  "Player 1 answered correctly",
  "He currently is in penality box",
  "And he's getting out of it",
  "He's got 1 points now",
  "Player 1 did not win",
  "He isn't the winner",
  "The next player is player 2",
]
`;

exports[`Trivia Wrong answer of last player and reset current player to first in list 1`] = `
Array [
  "Pop questions: 50",
  "Science questions: 50",
  "Sports questions: 50",
  "Rock questions: 50",
  "Number of players: 1",
  "Number of players: 2",
  "Player 0 answered wrongly",
  "He is put in penality box",
  "The current player is now 1",
]
`;

exports[`Trivia Wrong answer, roll odd and out of bounds 1`] = `
Array [
  "Pop questions: 50",
  "Science questions: 50",
  "Sports questions: 50",
  "Rock questions: 50",
  "Number of players: 1",
  "Player 0 rolled 1",
  "While not being in penalityBox",
  "He moves to place 1",
  "Asking question: Science Question 0",
  "Player 0 answered wrongly",
  "He is put in penality box",
  "The current player is now 0",
  "Player 0 rolled 7",
  "While in penalityBox",
  "He rolled an odd number",
  "He might get out of penality box",
  "He moves to place 8",
  "Asking question: Pop Question 0",
  "Player 0 rolled 7",
  "While in penalityBox",
  "He rolled an odd number",
  "He might get out of penality box",
  "He moves to place 3",
  "Asking question: Rock Question 0",
]
`;
